# ReShade-Linux-Install

./: .gitignore  Cargo.toml  Makefile  README.md
src/: g.rs  gui.rs  install.rs  install_new.rs  list.rs  main.rs  runtime.rs  runtime_gui.rs  var.rs
